--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@adiwajshing/baileys": "github:Caliph71/baileys",
+    "@adiwajshing/baileys": "3.5.3",
     "awesome-phonenumber": "^2.47.0",
     "brainly-scraper-v2": "^1.1.2",
     "canvacord": "^5.2.3",
